Deploy master node only on active clouds
Change-Id: I58d502e2e6076cfd0bfa79638017cca3b7b1654d